# MiniFileSystem

./: README.md
Siso2/: BitMap.cpp  BitMap.h  Block.cpp  Block.h  CMakeLists.txt  Directory.cpp  Directory.h  FileAttributes.cpp  FileAttributes.h  FileManager.cpp  FileManager.h  ParticionManager.cpp  ParticionManager.h  PartitionManager.cpp  PartitionManager.h  main.cpp
